# Footwear-Market-Data-Pipeline

./: LICENSE  README.MD  dataframes.ipynb  pyproject.toml  requirements.txt
app/: app.py
src/collect/: settings.py
src/collect/spiders/: mercadolivre.py  ml_data_spider.py
src/transform/: main.py  transform_load.py
